--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ trl>=0.7.0                     # Transformer Reinforcement Learning (SFT, DPO)
 accelerate>=0.25.0             # Distributed training utilities
 safetensors>=0.4.0             # Safe tensor serialization
 sentencepiece>=0.1.99          # Tokenizer support
+tensorboard>=2.15.0            # Visualization
 protobuf>=4.25.0               # Model serialization
 
 # =============================================================================
